# dataloop

./: .gitignore  Pipfile  README.md  dataloop.postman_collection.json  pyproject.toml
dataloop/: __main__.py  handlers.py  model.py
docker/: Dockerfile
kubernetes/: artifact-registry-access.yaml  dashboard.yaml  demo.yaml  frontend.yaml  grafana.yaml  namespaces.yaml  network_restrictions.yaml  prometheus.yaml  services.yaml
terraform/: .terraform.lock.hcl  bastion.tf  dns.tf  gke.tf  registry.tf  terraform.tfvars  versions.tf  vpc.tf
