[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "dataloop"
version = "0.0.1"
dependencies = [ "aiohttp", "cchardet", "aiodns", "motor", "dnspython", "pydantic", "pika"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [ "tests",]
namespaces = false
